--- a/form.css
+++ b/form.css
@@ -47,13 +47,13 @@ h2 {
     font-style: italic;
 }
 
-.formulario .gender-buttons {
+.formulario .genero-buttons {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
 }
 
-.formulario .gender-buttons button {
+.formulario .genero-buttons button {
     width: 32%;
     background-color: #f5f5f5;
     color: #333;
@@ -64,11 +64,11 @@ h2 {
     cursor: pointer;
 }
 
-.formulario .gender-buttons button:hover {
+.formulario .genero-buttons button:hover {
     background-color: #eee;
 }
 
-.formulario .gender-buttons button.active {
+.formulario .genero-buttons button.active {
     background-color: #d32f2f;
     color: white;
 }
@@ -123,7 +123,7 @@ h2 {
         padding: 15px;
     }
 
-    .formulario .gender-buttons button {
+    .formulario .genero-buttons button {
         font-size: 18px;
         padding: 12px;
     }
