--- a/src/bigBite/css/navbarRojo.css
+++ b/src/bigBite/css/navbarRojo.css
@@ -10,8 +10,7 @@
     position: sticky;
     top: 0;
     height: 10vh;
-    padding: 0 20px; 
-    margin-top: 10px;
+    padding: 10px 20px; 
   }
   
   .imgNavbar {
