--- a/src/bigBite/css/navbarRojo.css
+++ b/src/bigBite/css/navbarRojo.css
@@ -2,7 +2,7 @@
 
 /* Navbar */
 
-.navbar {
+.navbarRojo {
     background-color: rgba(223, 28, 28, 1);
     color: white;
     display: flex;
@@ -15,17 +15,17 @@
     padding: 10px 20px; 
   }
   
-  .imgNavbar {
+  .imgNavbarRojo {
     opacity: 0.4;
     padding-top: 50px;
   }
   
-  .logo {
+  .logoNR {
     width: 40px;
   }
   
   /* Estilos del menú hamburguesa */
-  .headerNavBar {
+  .headerNavBarRojo {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,7 +44,7 @@
     border-radius: 12px;
   }
   
-  .nombrePerfil {
+  .nombrePerfilNR {
     font-size: 1rem;
     text-align: center;
     margin-bottom: 30px;
@@ -151,7 +151,7 @@
   
   /* Ocultar enlaces en pantallas pequeñas */
   
-  .nav-links li a {
+  .nav-linksNR li a {
     color: white;
     text-decoration: none;
     font-size: 18px;
@@ -174,7 +174,7 @@
     border: none;
   }
   
-  .nav-links {
+  .nav-linksNR {
     display: flex;
     flex-direction: column;
     position: fixed;
@@ -189,7 +189,7 @@
     width: 75%;
   }
   
-  .nav-links.active {
+  .nav-linksNR.active {
     transform: translateX(0)
   }
   
@@ -233,7 +233,7 @@
         font-size: 1.3rem;
       }
     
-      .nav-links li a {
+      .nav-linksNR li a {
         font-size: 20px;
       }
     
@@ -245,7 +245,7 @@
         font-size: 2.5rem;
       }
 
-      .nav-links{
+      .nav-linksNR{
         width: 60%;
       }
   }
@@ -266,7 +266,7 @@
   
 
   
-    .nav-links {
+    .nav-linksNR {
       width: 50%;
     }
   
