--- a/src/bigBite/css/formulario.css
+++ b/src/bigBite/css/formulario.css
@@ -59,15 +59,11 @@ body {
 }
 
 /* Estilo de los botones */
-.formulario-buttons {
-    display: flex;
-    justify-content: space-between;
-}
-
-.formulario button {
+/* Botón Enviar (rojo) */
+.boton-enviar {
     width: 48%;
     padding: 10px;
-    background-color: #d32f2f;
+    background-color: #d32f2f; /* Rojo */
     color: white;
     border: none;
     border-radius: 5px;
@@ -76,6 +72,77 @@ body {
     transition: background-color 0.3s ease;
 }
 
-.formulario button:hover {
-    background-color: #a50000;
+.boton-enviar:hover {
+    background-color: #a50000; /* Rojo más oscuro al pasar el mouse */
+}
+
+/* Botón Resetear (amarillo) */
+.boton-reset {
+    width: 48%;
+    padding: 10px;
+    background-color: #FFBA49; /* Amarillo */
+    color: #333; /* Texto oscuro para mejor contraste */
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.boton-reset:hover {
+    background-color: #f0ac40; /* Amarillo más oscuro al pasar el mouse */
+}
+
+/* Estilos adicionales para el contenedor de botones */
+.formulario-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+.titulo-form h1{
+  
+    font-weight:600;
+    text-align: center;
+    color: #f9f9f9;
+    padding: auto;
+
+}
+.titulo-form{
+    background-color: #d32f2f;
+    padding: 2vh;
+}
+
+/* Media query para pantallas grandes */
+@media (min-width: 1024px) {
+    .container {
+        max-width: 800px; /* Ampliar el contenedor para pantallas más grandes */
+        padding: 40px;
+       
+
+    }
+
+    .formulario {
+        display: flex; /* Usar flex para alinear los campos mejor */
+        flex-wrap: wrap; /* Permitir que los elementos se ajusten en varias filas */
+        gap: 20px; /* Separar los campos */
+        justify-content: center;
+
+    }
+
+    .formulario div {
+     /*   width: 48%; /* Mostrar dos campos por fila en pantallas más grandes */
+    }
+
+    .formulario label {
+        font-size: 16px; /* Agrandar el tamaño del texto */
+    }
+
+    .formulario input {
+        font-size: 16px;
+    }
+
+    .formulario button {
+        width: 100%; /* Hacer los botones más grandes */
+        margin-top: 20px;
+    }
+    
 }
