--- a/src/bigBite/css/navbarRojo.css
+++ b/src/bigBite/css/navbarRojo.css
@@ -214,7 +214,8 @@
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
     list-style: none;
-    width: 75%;
+    width: 60%;
+    padding-right: 15px;
   }
   
   .nav-links.active {
@@ -281,8 +282,16 @@
       }
   }
 
+  @media (min-width: 480px) {
+    .nav-links{
+      width: auto;
+    }
+  }
+
 
   @media (min-width: 768px) {
+
+    
 
     .bi-question-circle,
     .bi-house-door,
