--- a/src/bigBite/css/ingresar.css
+++ b/src/bigBite/css/ingresar.css
@@ -57,11 +57,11 @@
    
 }
 
-.login-btn, .register-btn {
+.login-btn{
     background-color: #ff3d3d;
     color: white;
     padding: 12px;
-    width: 100%;
+    /*width: 100%;*/
     border: none;
     border-radius: 4px;
     font-size: 16px;
@@ -74,7 +74,7 @@
     background-color: #FFBA49;
     color: white;
     padding: 12px;
-    width: 100%;
+    /*width: 100%;*/
     border: none;
     border-radius: 4px;
     font-size: 16px;
