--- a/src/bigBite/css/formulario.css
+++ b/src/bigBite/css/formulario.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -40,6 +42,9 @@ body {
     color: #333;
     display: inline-block;
     font-size: 14px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .formulario input {
@@ -49,6 +54,9 @@ body {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 14px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .formulario span {
@@ -70,6 +78,9 @@ body {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .boton-enviar:hover {
@@ -87,6 +98,9 @@ body {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .boton-reset:hover {
