--- a/src/bigBite/css/home.css
+++ b/src/bigBite/css/home.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 h1{
     margin: 0px;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
   
   .tituloDestacado{
@@ -60,7 +65,11 @@ h1{
     padding-top: 50px;
     font-weight: 900;
     font-size: 2.25rem;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
+  
   
   .imgFondoSlider {
     filter:
@@ -87,6 +96,9 @@ h1{
     font-size: 1.5rem;
     filter: drop-shadow(0 0 10px rgba(0, 0, 0, .8));
     text-align: center;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   
   }
   
@@ -96,7 +108,12 @@ h1{
     text-align: justify;
     z-index: 9;
     font-weight: 600;
-  }
+        
+  font-family: "Poppins", sans-serif;
+ /* font-weight: 400;*/
+  font-style: normal;
+}
+  
   
   .btnAmarilloSlider {
     display: inline-block;
@@ -109,6 +126,9 @@ h1{
     font-weight: 700;
     z-index: 9;
     width: 45%;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   
   }
   
@@ -123,6 +143,9 @@ h1{
     border: none;
     z-index: 9;
     width: 80%;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
   
   .contenedorSlider {
