--- a/src/bigBite/css/ingresar.css
+++ b/src/bigBite/css/ingresar.css
@@ -1,5 +1,5 @@
 /* ingresar.css */
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .form-container {
    display: flex;
     justify-content: center;
@@ -25,6 +25,10 @@
     margin-bottom: 8px;
     display: block;
     color: #333;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
 }
 
 .inicio-sesion input[type="email"],
@@ -68,6 +72,9 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-bottom: 2vh;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
    
 }
 .register-btn {
@@ -81,6 +88,9 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-bottom: 2vh;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
    
 }
 
