--- a/src/bigBite/css/login.css
+++ b/src/bigBite/css/login.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .mensaje {
     font-size: 16px;
     margin-bottom: 30px;
@@ -24,6 +25,9 @@ button {
  .mensaje{
     text-align: center;
     margin-top: 30vh;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
  }
 
 .login-btn {
