--- a/src/bigBite/css/navbarBlanco.css
+++ b/src/bigBite/css/navbarBlanco.css
@@ -15,6 +15,10 @@
     padding: 5px 20px; 
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
   }
+
+  .inicioSesionBlanco{
+    color: black;
+  }
   
   .imgNavbar {
     opacity: 0.4;
