--- a/src/bigBite/css/navbarRojo.css
+++ b/src/bigBite/css/navbarRojo.css
@@ -14,6 +14,10 @@
     height: 10vh;
     padding: 5px 20px; 
   }
+
+  .inicioSesionRojo{
+    color: white;
+  }
   
   .imgNavbarRojo {
     opacity: 0.4;
@@ -283,10 +287,13 @@
   }
 
   @media (min-width: 480px) {
-    .nav-links{
+
+    .nav-linksNR {
       width: auto;
-    }
   }
+
+}
+
 
 
   @media (min-width: 768px) {
