--- a/src/bigBite/css/navbarBlanco.css
+++ b/src/bigBite/css/navbarBlanco.css
@@ -64,6 +64,11 @@
     text-decoration: underline;
   }
 
+  a .nombrePerfilNegro{
+    color: black;
+    text-decoration: none;
+  }
+
   .bi-person-circle{
     font-size: 2.3rem;
   }
