--- a/src/bigBite/css/menu.css
+++ b/src/bigBite/css/menu.css
@@ -144,6 +144,7 @@ button {
   transition: transform 0.2s ease;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
 
 }
@@ -158,14 +159,14 @@ button {
   color: #ff3b30;
   margin-top: 0;
 }
-.product-image {
+.product-card {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.product-image img {
-  height: auto;
+.product-card img {
+  height: 200px;
   border-radius: 10px;
   cursor: pointer;
 }
