--- a/src/bigBite/css/navbarRojo.css
+++ b/src/bigBite/css/navbarRojo.css
@@ -59,7 +59,17 @@
     color: white;
   }
 
-  
+  .logoLogeado {
+      width: 25%;
+      margin-bottom: 5px;
+  }
+
+  .nombrePerfilLogeado{
+    font-size: 1.2rem;
+    text-align: center;
+    margin-bottom: 30px;
+    color: white;
+  }
 
   .bi-person-circle{
     font-size: 2.3rem;
