--- a/src/bigBite/css/menu.css
+++ b/src/bigBite/css/menu.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 
 body {
-  font-family: Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
   background-color: #ffffff;
 }
 
