--- a/src/bigBite/css/navbarBlanco.css
+++ b/src/bigBite/css/navbarBlanco.css
@@ -14,6 +14,8 @@
     height: auto;
     padding: 5px 20px; 
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+    font-family: "Poppins", sans-serif;
+
   }
 
   .inicioSesionBlanco{
