--- a/src/bigBite/css/adminProductos.css
+++ b/src/bigBite/css/adminProductos.css
@@ -47,6 +47,12 @@ button {
   cursor: pointer;
 }
 
+button.disabled {
+  background-color: #ccc; /* Cambia el color cuando está deshabilitado */
+  cursor: not-allowed; /* Cambia el cursor para mostrar que no está disponible */
+}
+
+
 button:hover {
   background-color: #a10606;
 }
@@ -136,7 +142,7 @@ h2 {
   background-color: #e0e0e0; /* Color de fondo al pasar el mouse */
 }
 
-.imagen-hamburguesa {
+.imagen-producto {
   width: 100%;
   height: 100%;
   object-fit: cover;
