--- a/src/bigBite/css/home.css
+++ b/src/bigBite/css/home.css
@@ -133,7 +133,7 @@ h1{
   }
 
   .btnAmarilloSlider:hover{
-    background-color: #C10000;
+    background-color: #c89a04;
   }
   
   .btnRojoSlider {
