--- a/src/bigBite/css/formulario.css
+++ b/src/bigBite/css/formulario.css
@@ -107,6 +107,27 @@ body {
     background-color: #f0ac40; /* Amarillo más oscuro al pasar el mouse */
 }
 
+/* Boton Google */
+.boton-google {
+    width: 100%;
+    padding: 10px;
+    background-color: #FFBA49; /* Amarillo */
+    color: #333; /* Texto oscuro para mejor contraste */
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.boton-google:hover {
+    background-color: #f0ac40; /* Amarillo más oscuro al pasar el mouse */
+}
+
+
 /* Estilos adicionales para el contenedor de botones */
 .formulario-buttons {
     display: flex;
