--- a/src/bigBite/css/asientosContables.css
+++ b/src/bigBite/css/asientosContables.css
@@ -115,3 +115,14 @@
 .libro-diario tr:last-child td {
     border-bottom: none;
 }
+.mensaje-exito {
+    background-color: #FFBA49;
+    color: white;
+    padding: 10px 20px;
+    margin: 20px 0;
+    border-radius: 5px;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
