--- a/src/bigBite/css/login.css
+++ b/src/bigBite/css/login.css
@@ -10,14 +10,16 @@
     gap: 15px;
 }
 
-button {
+.buttons{
     padding: 12px;
     font-size: 14px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     transition: all 0.3s ease;
-}
+} 
+
+
  .contenedor-mensaje{
     align-items: center;
     margin-bottom: 30vh;
