--- a/src/bigBite/css/menu.css
+++ b/src/bigBite/css/menu.css
@@ -125,14 +125,14 @@ button {
 
 
 /*  Productos   */
-
 .product-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(1, 1fr); /* Por defecto, una columna para pantallas pequeñas */
   gap: 20px;
-  margin: 20px 50px 20px 50px;
-  /* padding-bottom: 20px; */
-  margin-bottom: 20px;
+  margin: 20px auto;
+  width: 90%;
+  padding: 0px 20px;
+ justify-content:center ;
 }
 
 .product-card {
@@ -147,23 +147,6 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-
-}
-
-.product-card:hover {
-  transform: translateY(-10px);
-}
-
-.product-card h3 {
-  margin-top: 10px;
-  font-size: 1.2em;
-  color: #ff3b30;
-  margin-top: 0;
-}
-.product-card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .product-card img {
@@ -171,10 +154,13 @@ button {
   border-radius: 10px;
   cursor: pointer;
 }
+.precio-card{
+  margin-top: 20px;
+}
 
 .cart-button {
   position: absolute;
-  bottom: 10px;
+  bottom: 23px;
   right: 10px;
   border: 0px solid transparent;
   cursor: pointer;
@@ -183,47 +169,17 @@ button {
   transition-duration: 0.25s;
 }
 
-.cart-button:hover{
-  border: 1.5px solid #ff3b30;
-  background-color: none;
-}
-
 .cart-button img {
   width: 30px;
   height: 30px;
 }
 
-
-
-
-
-@media (max-width: 524px) {
-  .menu-buttons {
-    gap: 10px;
-    width: 100%;
-  }
-
-  .product-card h3 {
-    font-size: 3.5vw;
-  }
-
-  .cart-button img {
-    width: 25px;
-    height: 25px;
-  }
-
+/* Para pantallas más grandes de 736px */
+@media (min-width: 736px) {
   .product-grid {
-    grid-template-columns: repeat(1, 1fr);
-    /* 2 columnas en pantallas medianas */
-  
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Múltiples columnas en pantallas grandes */
+    justify-content: center;
   }
-  .product-card img {
-    width: 70%;
-    height: auto;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  
 }
 
 @media (min-width: 1024px) {
